# flightpricetracker

./: .ruff.toml  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
docker/: Dockerfile
docs/: gen_ref_pages.py
flightpricetracker/: constants.py
tests/: __init__.py  test_import.py
