[project]
name = "flightpricetracker"
version = "0.1.0"
description = "An intelligent flight price monitoring system powered by Amadeus API that helps you never miss the best deals on airfare."
authors = [{name = "Shawn Deng", email = "shawndeng1109@qq.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<3.14.99"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.7",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "commitizen>=3.12.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mkdocs-gen-files>=0.5.0",
    "pymdown-extensions>=10.7",
    "mkdocs-literate-nav>=0.6.1",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
